syntax = "proto3";

package api.videoApi.service.v1;

option go_package = "lehu-video/api/videoApi/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoApi.service.v1";
import "google/api/annotations.proto";
import "api/videoApi/service/v1/base.proto";


message Comment {
	// @gotags: json:"id,omitempty,string"
	int64 id = 1; // 评论id
	// @gotags: json:"videoId,omitempty,string"
	int64 video_id = 2; // 视频id
	// @gotags: json:"parentId,omitempty,string"
	int64 parent_id = 3; // 父评论id
	CommentUser user = 4; // 评论用户
	CommentUser reply_user = 5; // 回复用户
	string content = 6; // 评论内容
	string date = 7; // 评论日期
	int64 like_count = 8; // 点赞数
	int64 reply_count = 9; // 回复数
	repeated Comment comments = 10; // 子评论
}

message CommentUser {
	// @gotags: json:"id,omitempty,string"
	int64 id = 1; // 用户id
	string name = 2; // 用户名称
	string avatar = 3; // 用户头像
	bool is_following = 4; // 是否关注
}

service CommentService {
	// 创建评论
	rpc CreateComment(CreateCommentReq) returns (CreateCommentResp) {
		option (google.api.http) = {
			post: "/v1/comment"
			body: "*"
		};
	};

	// 删除评论
	rpc RemoveComment(RemoveCommentReq) returns (RemoveCommentResp) {
		option (google.api.http) = {
			delete: "/v1/comment"
		};
	};

	// 列出视频的评论
	rpc ListComment4Video(ListComment4VideoReq) returns (ListComment4VideoResp) {
		option (google.api.http) = {
			post: "/v1/comment/video"
			body: "*"
		};
	};


	rpc ListChildComment(ListChildCommentReq) returns (ListChildCommentResp) {
		option (google.api.http) = {
			post: "/v1/comment/child"
			body: "*"
		};
	};
}

message CreateCommentReq {
	// @gotags: json:"videoId,omitempty,string"
	int64 video_id = 1; // 视频id
	string content = 2; // 评论内容
	// @gotags: json:"parentId,omitempty,string"
	int64 parent_id = 3;
	// @gotags: json:"replyUserId,omitempty,string"
	int64 reply_user_id = 4;
}

message CreateCommentResp {
	Comment comment = 1;
}

message RemoveCommentReq {
	// @gotags: json:"id,omitempty,string"
	int64 id = 1; // 评论id
}

message RemoveCommentResp {}

message ListComment4VideoReq {
	// @gotags: json:"videoId,omitempty,string"
	int64 video_id = 1; // 视频id
	PageStatsReq pagination = 2;
}

message ListComment4VideoResp {
	repeated Comment comments = 1;
	PageStatsResp pagination = 2;
}

message ListChildCommentReq {
	// @gotags: json:"commentId,omitempty,string"
	int64 comment_id = 1; // 评论id
	PageStatsReq pagination = 2;
}

message ListChildCommentResp {
	repeated Comment comments = 1;
	PageStatsResp pagination = 2;
}
